--- a/nilearn_comparing_edges.ipynb
+++ b/nilearn_comparing_edges.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from nilearn.connectome import sym_matrix_to_vec\n",
+    "from nilearn.connectome import sym_matrix_to_vec, \n",
+    "\n",
     "from scipy import stats\n",
     "dualnback = np.load(\"/home/finc/Dropbox/Projects/LearningBrain/data/neuroimaging/correlation_matrices_dualnback.npy\")\n",
     "\n"
@@ -36,29 +37,6 @@
     "\n",
     "\n",
     "rest.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ttest_relResult(statistic=array([-1.39379847, -0.07656235, -0.85916737, ..., -1.75437761,\n",
-       "        3.50287375, -1.13929924]), pvalue=array([ 0.17022384,  0.9393111 ,  0.39480199, ...,  0.08617363,\n",
-       "        0.00105254,  0.26060686]))"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = stats.ttest_rel(one_back, two_back)\n",
-    "x"
    ]
   },
   {
@@ -117,6 +95,37 @@
    ],
    "source": [
     "pvalues.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsmodels.stats.multitest as ssm\n",
+    "\n",
+    "_, pvals_corrected, _, _ = ssm.multipletests(pvalues, alpha = 0.05, method = 'fdr_bh')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "395"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pvals_corrected < 0.05"
    ]
   }
  ],
