added HCP pipeline

--- a/nilearn_comparing_edges.ipynb
+++ b/nilearn_comparing_edges.ipynb
@@ -10,20 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(46, 2, 264, 264)"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -40,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +38,7 @@
        "(46, 34716)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +407,12 @@
     "bin_vector_pos =  np.array([1 if thr > 0 else 0 for thr in wei_vector])\n",
     "bin_vector_neg =  np.array([1 if thr < 0 else 0 for thr in wei_vector])\n",
     "\n",
-    "\n"
+    "diag = np.zeros((264))\n",
+    "bin_matrix_pos = vec_to_sym_matrix(bin_vector_pos, diagonal = diag)\n",
+    "bin_matrix_neg = vec_to_sym_matrix(bin_vector_neg, diagonal = diag)\n",
+    "\n",
+    "networks_pos = calculate_lsn_edges(bin_matrix_pos, labels)\n",
+    "networks_neg = calculate_lsn_edges(bin_matrix_neg, labels)\n"
    ]
   },
   {
@@ -426,11 +420,7 @@
    "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "diag = np.zeros((264))\n",
-    "bin_matrix_pos = vec_to_sym_matrix(bin_vector_pos, diagonal = diag)\n",
-    "bin_matrix_neg = vec_to_sym_matrix(bin_vector_neg, diagonal = diag)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -438,8 +428,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "networks_pos = calculate_lsn_edges(bin_matrix_pos, labels)\n",
-    "networks_neg = calculate_lsn_edges(bin_matrix_neg, labels)\n",
     "\n"
    ]
   },
