Small style changes

--- a/nilearn_HCP_pipeline_power.ipynb
+++ b/nilearn_HCP_pipeline_power.ipynb
@@ -25,14 +25,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
-    "from os import listdir\n",
-    "import glob as glob\n",
+    "import glob\n",
     "\n",
     "import nilearn\n",
-    "from nilearn import datasets # for fetching atlas\n",
-    "from nilearn import plotting \n",
-    "from nilearn import input_data\n",
-    "from nilearn import signal\n",
+    "from nilearn import datasets, plotting, input_data, signal # datasets: for fetching atlas\n",
     "from nilearn.input_data import NiftiLabelsMasker\n",
     "from nilearn.connectome import ConnectivityMeasure\n",
     "\n",
@@ -88,8 +84,12 @@
     "main_folder = '/home/finc/Dropbox/GitHub/nilearn_task_networks/'\n",
     "top_dir = '/media/finc/Elements/extracted_HCPWM/'\n",
     "\n",
-    "fmri_list = glob.glob(top_dir + '1*/*/*/*/tfMRI_WM_RL.nii.gz')\n",
-    "confounds_list = glob.glob(top_dir + '1*/*/*/*/Movement_Regressors.txt' )\n",
+    "fmri_list = glob.glob(top_dir + '1*/**/tfMRI_WM_RL.nii.gz', recursive=True) # if you want all tfMRI_WM_RL.nii.gz files hanging from topdir\n",
+    "confounds_list = glob.glob(top_dir + '1*/**/Movement_Regressors.txt', recursive=True)\n",
+    "\n",
+    "#Warning! glob doesn't assure to give you the files in order!! you may want to do:\n",
+    "# fmri_list = sorted(fmri_list)\n",
+    "# confounds_list = sorted(confounds_list)\n",
     "\n",
     "print(f'Number of subjects: {len(fmri_list)}')"
    ]
@@ -116,14 +116,14 @@
     "# Creating masker file\n",
     "\n",
     "power_spheres = input_data.NiftiSpheresMasker(\n",
-    "    seeds = power_coords, \n",
-    "    smoothing_fwhm = 6, \n",
-    "    radius = 5,\n",
-    "    detrend = True, \n",
-    "    standardize = True,\n",
-    "    low_pass = 0.08, \n",
-    "    high_pass = 0.009,\n",
-    "    t_r = 0.72\n",
+    "    seeds=power_coords, \n",
+    "    smoothing_fwhm=6, \n",
+    "    radius=5,\n",
+    "    detrend=True, \n",
+    "    standardize=True,\n",
+    "    low_pass=0.08, \n",
+    "    high_pass=0.009,\n",
+    "    t_r=0.72\n",
     ")\n",
     "\n",
     "parcellation = power_spheres"
@@ -154,20 +154,23 @@
     }
    ],
    "source": [
-    "# Create empty timeseries to store array\n",
-    "timeseries_all = np.zeros((len(fmri_list), 405, 264)) \n",
+    "def collect_data(fmrilist, confoundslist, x=405, y=264):\n",
+    "    # Create empty timeseries to store array\n",
+    "    timeseries_all = np.zeros((len(fmrilist), x, y)) \n",
     "\n",
-    "for sub in range(len(fmri_list)):\n",
-    "             \n",
-    "    # Load confound file\n",
-    "    confounds = np.loadtxt(confounds_list[sub])\n",
-    "        \n",
-    "    # Extract timeseries\n",
-    "    timeseries = parcellation.fit_transform(fmri_list[sub], confounds = confounds)\n",
-    "    \n",
-    "    # Save timeseries to array\n",
-    "    timeseries_all[sub, :, :] = timeseries\n",
-    "    \n",
+    "    for i, (fmri_i, conf_i) in enumerate(zip(fmrilist, confoundslist):\n",
+    "\n",
+    "        # Load confound file\n",
+    "        confounds = np.loadtxt(conf_i)\n",
+    "\n",
+    "        # Extract timeseries\n",
+    "        timeseries = parcellation.fit_transform(fmri_i, confounds = confounds)\n",
+    "\n",
+    "        # Save timeseries to array\n",
+    "        timeseries_all[i, :, :] = timeseries\n",
+    "\n",
+    "\n",
+    "timeseries_all = collect_data(fmri_list, confounds_list)\n",
     "timeseries_all.shape    "
    ]
   },
@@ -242,13 +245,11 @@
     "t_r = 0.72\n",
     "n_scans = 405\n",
     "\n",
-    "onsets_dir = '/home/finc/Dropbox/GitHub/nilearn_task_networks/support/onsets_HCP.csv'\n",
+    "onsets_dir = os.path.join(main_folder, 'support', 'onsets_HCP.csv')\n",
     "\n",
     "events = pd.read_csv(onsets_dir)\n",
-    "events\n",
     "\n",
     "frame_times = np.arange(n_scans) * t_r\n",
-    "frame_times\n",
     "\n",
     "design_matrix = make_design_matrix(frame_times, events, hrf_model = None)\n",
     "design_matrix = design_matrix.reset_index()\n",
@@ -286,22 +287,22 @@
    ],
    "source": [
     "conditions = ['0back', '2back']\n",
-    "sub_n = len(timeseries_all[:, 0, 0])\n",
-    "rois_n = len(timeseries_all[0, 0, : ])\n",
+    "sub_n = timeseries_all.shape[0]\n",
+    "rois_n = timeseries_all.shape[2]\n",
     "\n",
     "correlation_matrices = np.zeros((sub_n, len(conditions), rois_n, rois_n))\n",
     "\n",
     "for sub in range(sub_n):\n",
-    "    for cond in range(len(conditions)):\n",
+    "    for i, cond in enumerate(conditions):\n",
     "    \n",
-    "        task = timeseries_all[sub, design_matrix[conditions[cond]].astype('bool').astype('bool'), :]\n",
+    "        task = timeseries_all[sub, design_matrix[cond].astype('bool').astype('bool'), :]\n",
     "        \n",
-    "        correlation_measure = ConnectivityMeasure(kind = 'correlation')\n",
+    "        correlation_measure = ConnectivityMeasure(kind='correlation')\n",
     "    \n",
     "        fc = correlation_measure.fit_transform([task])[0]\n",
     "        np.fill_diagonal(fc, 0)\n",
     "        \n",
-    "        correlation_matrices[sub, cond, :, :] = fc\n",
+    "        correlation_matrices[sub, i, :, :] = fc\n",
     "\n",
     "\n",
     "correlation_matrices.shape"
@@ -367,7 +368,7 @@
     "pvals_corrected_thr = np.zeros((len(pvals_corrected)))\n",
     "\n",
     "pvals = np.array([0 if p >= 0.05 else 1 for p in pvals_corrected])\n",
-    "sum(pvals)"
+    "pvals.sum()"
    ]
   },
   {
@@ -460,8 +461,8 @@
    "source": [
     "# separate network for positive and negative differences\n",
     "\n",
-    "bin_vector_pos =  np.array([1 if thr > 0 else 0 for thr in wei_vector])\n",
-    "bin_vector_neg =  np.array([1 if thr < 0 else 0 for thr in wei_vector])\n",
+    "bin_vector_pos =  (wei_vector > 0) * 1\n",
+    "bin_vector_neg =  (wei_vector < 0) * 1 # or np.logical_not(bin_vector_pos) but you have to be careful for when ==0\n",
     "\n",
     "diag = np.zeros((264))\n",
     "bin_matrix_pos = vec_to_sym_matrix(bin_vector_pos, diagonal = diag)\n",
@@ -571,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('/home/finc/Dropbox/GitHub/nilearn_task_networks/data/matrix_wei_2backvs0back', matrix_wei)"
+    "np.save(os.path.join(main_folder, 'data', 'matrix_wei_2backvs0back'), matrix_wei)"
    ]
   },
   {
@@ -954,7 +955,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matrix = np.load('/home/finc/Dropbox/GitHub/nilearn_task_networks/data/matrix_wei_2backvs0back.npy')"
+    "matrix = np.load(os.path.join(main_folder, 'data', 'matrix_wei_2backvs0back.npy'))"
    ]
   },
   {
@@ -993,7 +994,7 @@
     "from sklearn import neighbors\n",
     "\n",
     "# Loading coordinates from activation analysis\n",
-    "activ = pd.read_csv('/home/finc/Dropbox/GitHub/nilearn_task_networks/support/coordinates_0back_2back.csv')\n",
+    "activ = pd.read_csv(os.path.join(main_folder, 'support', 'coordinates_0back_2back.csv')\n",
     "\n",
     "activ_coords = pd.DataFrame(activ, columns = ['X', 'Y', 'Z']).values\n",
     "\n",
@@ -1069,21 +1070,7 @@
     }
    ],
    "source": [
-    "# Create empty timeseries to store array\n",
-    "timeseries_all_activ = np.zeros((len(fmri_list), 405, 27)) \n",
-    "\n",
-    "for sub in range(len(fmri_list)):\n",
-    "             \n",
-    "    # Load confound file\n",
-    "    confounds = np.loadtxt(confounds_list[sub])\n",
-    "        \n",
-    "    # Extract timeseries\n",
-    "    timeseries = parcellation.fit_transform(fmri_list[sub], confounds = confounds)\n",
-    "    \n",
-    "    # Save timeseries to array\n",
-    "    timeseries_all_activ[sub, :, :] = timeseries\n",
-    "    \n",
-    "    "
+    "timeseries_all_activ = collect_data(fmri_list, confounds_list, x=405, y=27)    "
    ]
   },
   {
@@ -1151,9 +1138,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "def calculate_lsn_edges(A, labels):\n",
+    "    \"\"\"Function calculates number of edges between and within predefined large-scale networks (LSNs).\n",
+    "    The function takes binary symetrical adjacency matrix, module assignment of each ROI and calculate number of edges between and within each\n",
+    "    large-scale network.\n",
     "\n",
-    "def calculate_lsn_edges (A, labels):\n",
+    "    Parameters\n",
+    "    ------------\n",
+    "    array: N x N binary ajdacency matrix\n",
+    "    array: N-length vector with module assignment for each node\n",
+    "\n",
+    "    Returns\n",
+    "    ------------\n",
+    "    array: M x M matrix with number of edges between each module\n",
+    "\n",
+    "    \"\"\"\n",
+    "    columns = np.unique(labels)\n",
+    "    labels = np.array(labels).reshape(len(labels), 1)\n",
+    "    lsn_matrix = (labels == columns) * 1\n",
+    "\n",
+    "    lsn_edges = lsn_matrix.T @ A @ lsn_matrix\n",
+    "    return lsn_edges\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_lsn_edges2(A, labels):\n",
     "    \"\"\"Function calculates number of edges between and within predefined large-scale networks (LSNs).\n",
     "    The function takes binary symetrical adjacency matrix, module assignment of each ROI and calculate number of edges between and within each\n",
     "    large-scale network.\n",
@@ -1181,7 +1195,12 @@
     "                lsn_matrix[row, col] = 0\n",
     "\n",
     "    lsn_edges = lsn_matrix.T @ A @ lsn_matrix\n",
-    "    return lsn_edges\n"
+    "    return lsn_edges\n",
+    "\n",
+    "\n",
+    "test_a = np.arange(16).resape((4, 4))\n",
+    "labels = np.array(['a', 'a', 'b', 'b'])\n",
+    "assert np.alltrue( calculate_lsn_edges(test_a, labels) == calculate_lsn_edges2(test_a, labels))"
    ]
   }
  ],
